# scope-transparent

./: README.MD  pyproject.toml
src/scope_transparent/: __init__.py  pipeline.py  plugin.py  schema.py
