[project]
name = "scope-transparent"
version = "0.1.0"
description = "Transparent mask plugin for Daydream Scope"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = []

[project.entry-points.scope]
transparent = "scope_transparent:plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scope_transparent"]
